--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   readmore: ^2.2.0
   flutter_downloader: ^1.11.8
+  fl_chart: 0.65.0
 
 
 dev_dependencies:
