--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   local_auth: ^2.3.0
   pull_to_refresh: ^2.0.0
   readmore: ^2.2.0
+  url_launcher: ^6.2.6
   flutter_downloader: ^1.11.8
   fl_chart: 0.65.0
 
